# rust_game_engine

./: .gitignore  Cargo.toml  README.md  build.rs
res/models/: cat_cube.mtl
res/shaders/: shader.wgsl  sprite.wgsl
src/: camera.rs  entity.rs  event.rs  lib.rs  main.rs  render.rs  resources.rs  space.rs  system.rs  util.rs
src/entity/: component.rs  event.rs  render_comp.rs  space.rs  system.rs
src/render/: instance.rs  model.rs  render_2d.rs  render_3d.rs  texture.rs
