[package]
name = "rust_game_engine"
version = "0.2.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"


[dependencies]
winit = "0.28.5"
env_logger = "0.10"
log = "0.4"
wgpu = "0.17.0"
pollster = "0.3.0"  # for running an async func in main
bytemuck = { version = "1.12", features = [ "derive" ] }
anyhow = "1.0"
cgmath = "0.18"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tobj = { version = "4.0.0", features = ["async"]}
cfg-if = "1.0.0"
getrandom = { version = "0.2", features = ["js"] }


[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]


# for web assembly stuff:
[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
wgpu = { version = "0.17.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}
reqwest = { version = "0.11" }
